# mt10-base

./: .gitattributes
mt10_ws/: 99-custom-mt.rules  rover_control.sh
mt10_ws/src/rover_node/rover_node/: rover_run.py
mt_keyb_arm_ws/src/: README.md  requirements.txt
mt_keyb_arm_ws/src/miniarm_ik/: package.xml  setup.cfg  setup.py
mt_keyb_arm_ws/src/miniarm_ik/IK_Simulator/: ik_sim.py
mt_keyb_arm_ws/src/miniarm_ik/launch/: miniarm_ik_launch.py
mt_keyb_arm_ws/src/miniarm_ik/miniarm_ik/: ik_feed_tuning.py  ik_sim_node.py  keyb_ik.py  miniarm_ser.py  user_input_target.py
mt_keyb_arm_ws/src/miniarm_ik/pkgs/: featureTracker.py  ikSolver.py  keyLayout.py  keyPos_detection.py  params.py
mt_keyb_arm_ws/src/miniarm_interfaces/: CMakeLists.txt  package.xml
mt_keyb_arm_ws/src/v2/: IK_Solver_Mine.py  addedCodes.py  ikpy_solver.py  main_detection_guidence_file.py  perspectiveTransformation_numpy.py  perspectiveTransformation_scipy.py.BAK
ros2_ws/src/finalassemdoneright/: CMakeLists.txt  package.xml
ros2_ws/src/finalassemdoneright/config/: joint_names_finalassemdoneright.yaml
ros2_ws/src/finalassemdoneright/launch/: spawn_robot.launch.py
ros2_ws/src/finalassemdoneright/meshes/: Front_left_wheel.STL  Front_right_wheel.STL  Left_arm.STL  Rear_left_wheel.STL  Rear_right_wheel.STL  Right_arm.STL  rover_base.STL
ros2_ws/src/finalassemdoneright/urdf/: finalassemdoneright.csv  finalassemdoneright.urdf
ros2_ws/src/finalassemdoneright/worlds/: empty.world
ros2_ws/src/mt10_control/: setup.py
ros2_ws/src/my_bot/: yolov8n-25-2-24-40e.pt
(+69 files in other folders)
