<?xml version="1.0"?>
<package format="3">
  <name>finalassemdoneright</name>
  <version>0.0.1</version>
  <description>ROS2 package for launching the finalassemdoneright URDF model in Gazebo.</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
